- removed second scrollbar in cart - worked / improved but not finished function for calculating prices - added style class for further information about delivery fees - added cart script - fixed display error when toggling cart

--- a/style.css
+++ b/style.css
@@ -82,6 +82,10 @@ h2 {
 
 }
 
+.small {
+    font-size: 12px;
+}
+
 .dish_overview {
     display: flex;
     justify-content: space-between;
